# apidiff

./: .gitignore  README.md  setup.cfg
apidiff/: annotation_cmd.py  annotation_formatter.py  annotator.py  baseline.py  changelog.py  changelog_cmd.py  cli.py  comparator.py  constraints_cmd.py  defaults_cmd.py  deprecated_cmd.py  deprecation.py  differ.py  differ_callbacks.py  differ_enums.py  differ_examples.py  differ_extensions.py  differ_extensions_allof.py  differ_extensions_constraints.py  differ_extensions_defaults.py  differ_extensions_deprecated.py  differ_extensions_discriminator.py  differ_extensions_formats.py  differ_extensions_media.py  differ_extensions_minmax.py  differ_extensions_nullable.py  differ_extensions_patterns.py  differ_extensions_readonly.py  differ_extensions_response.py  differ_extensions_schema.py  differ_extensions_titles.py  differ_extensions_writeonly.py  differ_extensions_xof.py  differ_headers.py  differ_info.py  differ_links.py  differ_params.py  differ_security.py  differ_servers.py  differ_tags.py  (+39 more)
tests/: test_annotation_formatter.py  test_annotator.py  test_baseline.py  test_baseline_integration.py  test_changelog.py  test_cli.py  test_comparator.py  test_comparator_integration.py  test_constraints_cmd.py  test_deprecation.py  test_differ.py  test_differ_callbacks.py  test_differ_enums.py  test_differ_examples.py  test_differ_extensions.py  test_differ_extensions_allof.py  test_differ_extensions_constraints.py  test_differ_extensions_defaults.py  test_differ_extensions_deprecated.py  test_differ_extensions_discriminator.py  (+49 more)
