[metadata]
name = apidiff
version = 0.1.0
description = Detects breaking changes between two OpenAPI spec versions and outputs a structured diff report.
author = apidiff contributors
license = MIT

[options]
packages = apidiff
python_requires = >=3.8
install_requires =
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    apidiff = apidiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
